# Django_course_work

./: .env.sample  lorem.html  pyproject.toml
blog/: forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
fixture/: data.json
mailing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: robot.py
mailing/migrations/: 0001_initial.py  0002_alter_attempt_server_response.py  0002_initial.py  0003_alter_attempt_options_and_more.py  0003_mailing_is_active.py  0004_alter_mailing_date_of_first_mail.py  0004_alter_mailing_status.py  0005_alter_mailing_periodicity_alter_mailing_status.py
mailing/templates/: base.html
mailing/templates/includes/: inc_header.html  inc_image.html  inc_style.html
mailing/templates/mailing/: attempt_list.html  client_confirm_delete.html  client_detail.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py
users/templates/: login.html  login_after_activate.html
users/templates/users/: profile.html  recovery_password.html  user_form.html  user_list.html
