[tool.poetry]
name = "course work dj"
version = "0.1.0"
description = ""
authors = ["m.romantsov <romancov_dzr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
pillow = "^10.4.0"
django-apscheduler = "^0.7.0"
pytz = "^2024.2"
psycopg2-binary = "^2.9.9"
dateutils = "^0.6.12"
slugify = "^0.0.1"
unidecode = "^1.3.8"
python-slugify = "^8.0.4"
redis = "^5.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
